--- a/app/styles.scss
+++ b/app/styles.scss
@@ -1,54 +1,84 @@
 body {
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #333;
   margin: 0;
-  padding: 0;
   overflow: hidden;
 }
-
-a {
-  color: #08c;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
+// a {
+//   color: #08c;
+//   text-decoration: none;
+// }
+//
+// a:hover {
+//   text-decoration: underline;
+// }
+//
 
 .container {
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 720px;
-  padding: 1em;
+  margin-left: 0;
+  margin-right: 0;
+  width: 100%;
+  padding: 0;
 }
 
-.footer {
-  margin-top: 50px;
-  border-top: 1px solid #eee;
-  padding: 20px 0;
-  font-size: 12px;
-  color: #999;
+.col-lg-1,
+.col-lg-10,
+.col-lg-11,
+.col-lg-12,
+.col-lg-2,
+.col-lg-3,
+.col-lg-4,
+.col-lg-5,
+.col-lg-6,
+.col-lg-7,
+.col-lg-8,
+.col-lg-9,
+.col-md-1,
+.col-md-10,
+.col-md-11,
+.col-md-12,
+.col-md-2,
+.col-md-3,
+.col-md-4,
+.col-md-5,
+.col-md-6,
+.col-md-7,
+.col-md-8,
+.col-md-9,
+.col-sm-1,
+.col-sm-10,
+.col-sm-11,
+.col-sm-12,
+.col-sm-2,
+.col-sm-3,
+.col-sm-4,
+.col-sm-5,
+.col-sm-6,
+.col-sm-7,
+.col-sm-8,
+.col-sm-9,
+.col-xs-1,
+.col-xs-10,
+.col-xs-11,
+.col-xs-12,
+.col-xs-2,
+.col-xs-3,
+.col-xs-4,
+.col-xs-5,
+.col-xs-6,
+.col-xs-7,
+.col-xs-8,
+.col-xs-9 {
+  padding-right: 0 !important;
+  padding-left: 0 !important;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  color: #222;
-  font-weight: 100;
-  margin: 0.5em 0;
+.list-group-item:first-child {
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
 }
 
-label {
-  color: #999;
-  display: inline-block;
-  font-size: 0.85em;
-  font-weight: bold;
-  margin: 1em 0;
-  text-transform: uppercase;
+.list-group-item:last-child {
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
 .hint {
